# colourmapper-dev

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  colour.palettes.txt  pyproject.toml
demo/: demo.tape
src/colourmapper/: ColourMapper.py  ColourMapperValues.csv  __init__.py  cm.py  colorNames.mapping.csv  crayola2.mapping.csv  mapping_file_create.py  named_colours_map.json  xkcd.rgb.mapping.csv
tests/: conftest.py  test_argument_parser.py  test_cm.py  test_colour_mapper.py  test_colour_mapper_alt.py  test_mapping_file_create.py
